fix nav item spacing

--- a/css/nav.css
+++ b/css/nav.css
@@ -20,7 +20,7 @@ nav {
 .nav-home {
     display: flex;
     align-items: center;
-    margin-right: 1.5rem;
+    margin-right: 2.5rem;
     color: white;
     white-space: nowrap;
 }
